bat.bool1.monkeytrouble.MonkeyTrouble.scala.code
var A = (!aSmile && bSmile)
var B = (aSmile && !bSmile)
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
  (aSmile,bSmile) match{
    case(true,true) => return true
    case(false,false) => return true
    case _ => 
  }
  
}